Update OpenAPI swagger documentation
